# rsjvm

./: Cargo.toml
.github/workflows/: rust.yaml
class-reader/: Cargo.toml
class-reader/src/: attribute.rs  byte_reader.rs  class_file_reader.rs  class_file_version.rs  field.rs  instruction.rs  predefined_attributes.rs
class-reader/tests/: common.rs  constant_pool.rs  lib.rs  test_bootstrap_methods.rs  test_code_inner.rs  test_nest_host_nest_members.rs  test_permitted_subclasses.rs
class-reader/tests/resources/: BootstrapMethods.java  IntListControlFlowSingleFunction.java  NestHostNestMembers.java  PermittedSubclasses.java  SumArithmeticExceptionCatch.java
interpreter/: Cargo.toml
interpreter/src/: frame.rs  instruction_executor.rs  lib.rs
parser/: Cargo.toml
parser/src/: byte_reader.rs  field.rs
parser/tests/resources/: ConstantPool.java
src/: access_flag.rs  attribute.rs  byte_reader.rs  class_file.rs  class_file_reader.rs  class_file_version.rs  class_reader.rs  constant_pool.rs  field.rs  instruction.rs  lib.rs  method.rs  predefined_attributes.rs
tests/: constant_pool.rs
