[package]
name = "rsjvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cesu8 = "1.1.0"
clippy = "0.0.302"
derive_more = "0.99.18"
name-variant = "0.1.0"
rustfmt = "0.10.0"
strum = "0.26.2"
strum_macros = "0.26.2"
thiserror = "1.0.60"
